Alignment fix

--- a/src/app/head/hamburger-menu/hamburger-menu.component.scss
+++ b/src/app/head/hamburger-menu/hamburger-menu.component.scss
@@ -617,14 +617,14 @@ app-header {
   }
   .nav-sub-category-items {
     height: auto;
-    padding: 8px 12px 8px 42px !important;
+    padding: 8px 12px 8px 32px !important;
     width: auto;
     margin-left: 0px !important;
   }
 }
 
 .mat-list-base .second-level-link {
-  padding-left: 58px !important;
+  padding-left: 48px !important;
 }
 
 .Group-premium-designation {
